ecmascript/parser/tests/test262-error-references/fail/7fdf990c6f42edcd.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/7fdf990c6f42edcd.js:1:1
  |
1 | export * from "a"
  | ^^^^^^

